# Object-detection-model-app

./: .dockerignore  .gitattributes  .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
static/: style.css
templates/: upload.html
