[tool.poetry]
name = "object-detection-yolo"
version = "0.1.0"
description = "YOLOv8 Object Detection FastAPI App"
authors = ["Silas okanlawonsilas@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.2"
uvicorn = "0.29.0"
jinja2 = "3.1.3"
python-multipart = "0.0.9"
pillow = "10.3.0"
numpy = "*"
ultralytics = "*"
requests = "*"

[tool.poetry.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port $PORT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 